<resources>
    <string name="app_name" translatable="false">lrkFM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_app">App</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="nav_bookmarks">Bookmarks</string>
    <string name="home" translatable="false">Home</string>
    <string name="unable_to_load_files0">Unable to access files <node>&#x1f612;</node></string>
    <string name="unable_to_load_files1">The directory might also be empty.</string>
    <string name="nav_path">Open Path</string>
    <string name="okay">@android:string/ok</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="invalid_path">Invalid path! Only absolute paths pointing to a directory please.</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="nav_bug_report">Report Bug</string>
    <string name="share_file">Share File</string>
    <string name="pref_show_toast_cd">Show Toast on directory change</string>
    <string name="pref_show_toast_cd_desc">When loading a new directory, a toast will be shown.</string>
    <string name="toast_cd_new_dir">New Directory:&#160;</string>
    <string name="loading">Loading…</string>
    <string name="pref_home_dir">Home Directory</string>
    <string name="pref_home_dir_desc">The home directory where the App launches at.</string>
    <string name="pref_bookmarks">Bookmarks</string>
    <string name="pref_bookmarks_desc">Edit your bookmarks.</string>
    <string name="no_app_to_handle_file">No App found to handle this file!</string>
    <string name="empty_directory">Directory is empty!</string>
    <string name="bookmark_this_folder">Use current folder</string>
    <string name="bookmark_set_path">Input bookmark path</string>
    <string name="pref_bookmark_corrent_folder">Bookmark current folder</string>
    <string name="pref_bookmark_corrent_folder_desc">Don\'t prompt bookmark path when adding a bookmark.</string>
    <string name="path_input_hint">Absolute paths only!</string>
    <string name="pref_header_unit">Unit to use in header</string>
    <string name="pref_header_unit_desc">MiB or GiB</string>
    <string name="pref_header_unit_default_value" translatable="false">@string/pref_header_unit_m_value</string>
    <string name="pref_header_unit_m_value" translatable="false">m</string>
    <string name="pref_header_unit_g_value" translatable="false">g</string>
    <string name="pref_header_unit_g" translatable="false">Gibibyte</string>
    <string name="pref_header_unit_m" translatable="false">Mebibyte</string>
    <string name="pref_cat_ui" translatable="false">UI</string>
    <string name="pref_cat_app">Application</string>
    <string name="copy">Copy</string>
    <string name="op_destination">Destination</string>
    <string name="err_activity_null">Unable to register context menu</string>
    <string name="warn_file_exists_title">File exists</string>
    <string name="warn_file_exists_msg">The existing file will be overwritten. Are you sure that you want to continue?</string>
    <string name="yes">Yes</string>
    <string name="delete">Delete</string>
    <string name="warn_delete_msg">Are you sure that you want to delete: </string>
    <string name="move">Move</string>
    <string name="rename">Rename</string>
    <string name="name_input_hint">Enter new directory name</string>
    <string name="enter_new_file_name">Enter new file name</string>
    <string name="new_directory">New Directory</string>
    <string name="new_file">New File</string>
    <string name="err_file_exists">The specified file already exists!</string>
    <string name="err_unable_to_mkdir">Unable to create directory!</string>
    <string name="file_icon_desc">Icon that shows if the element is a file or a directory.</string>
    <string name="context_btn_desc">Button that opens the file operations context menu.</string>
    <string name="action_reload_view">Reload</string>
    <string name="err_deleting_element">Unable to delete!</string>
    <string name="err_empty_input">Input may not be empty!</string>
    <string name="pref_bookmark_deletion">Bookmark edit mode</string>
    <string name="pref_bookmark_corrent_deletion_desc">When activated, delete and edit buttons are shown next to each bookmark.</string>
    <string name="pref_filename_length">Maximum filename length</string>
    <string name="pref_filename_length_desc">File names will be concatenated at this length and above.</string>
    <string name="pref_header_path_length">Max length of header path</string>
    <string name="pref_header_path_length_desc">The path will bew shortened from the front from this length.</string>
    <string name="pref_header_path_length_default" translatable="false">27</string>
    <string name="pref_version">App Version</string>
    <string name="pref_sortby_value_default" translatable="false">@string/pref_sortby_value_name_asc</string>
    <string name="pref_sortby_title">File sort param</string>
    <string name="pref_sortby_desc">The files in the file view will be sorted by this property.</string>
    <string name="pref_sortby_text_name_asc">Name (Ascending)</string>
    <string name="pref_sortby_text_name_desc">Name (Descending)</string>
    <string name="pref_sortby_text_date_asc">Date (Ascending)</string>
    <string name="pref_sortby_text_date_desc">Date (Descending)</string>
    <string name="pref_sortby_value_name_asc" translatable="false">namea</string>
    <string name="pref_sortby_value_name_desc" translatable="false">named</string>
    <string name="pref_sortby_value_date_asc" translatable="false">datea</string>
    <string name="pref_sortby_value_date_desc" translatable="false">dated</string>
    <string name="pref_context_for_ops_desc">When activated you need to navigate to the destination path.</string>
    <string name="pref_context_for_ops">Don\'t prompt for destination path.</string>
    <string name="pref_context_for_ops_toast_desc">Show toast when adding a file to the operations context.</string>
    <string name="pref_context_for_ops_toast">Show toast on file operation</string>
    <string name="file_added_to_context">Added file to operation context:&#160;</string>
    <string name="action_paste">Paste</string>
    <string name="switching_op_mode">Switching operation mode. Queue reset.</string>
    <string name="action_clear_op_context">Clear operation</string>
    <string name="extract">Extract</string>
    <string name="a11y_desc_edit">Edit Item</string>
    <string name="a11y_desc_delete">Delete Item</string>
    <string name="copy_path">Copy Path</string>
    <string name="file_location">File Location</string>
    <string name="new_zip_file">New ZIP FIle</string>
    <string name="add_to_zip">Add to ZIP file</string>
    <string name="create_zip_file">Create ZIP File</string>
    <string name="unable_to_create_zip_file">Unable to create ZIP file! (IOException)</string>
    <string name="err_invalid_input_zip">Invalid input for file name.</string>
    <string name="no">No</string>
    <string name="extract_in_this_directory_prompt_text">Do you want to extract the archive into this directory?\n\nIf you click no, you can navigate to another directory and select \'Extract\' from the menu.</string>
    <string name="pref_always_extract_in_current_folder">Always extract in current directory</string>
    <string name="pref_always_extract_in_current_folder_desc">When activated, all archives will be extracted in the current directory.</string>
    <string name="free">free</string>
    <string name="unable_to_recognize_archive_format">Unable to recognize archive format.</string>
    <string name="title_activity_intro">Welcome</string>
    <string name="intro_text_1">Welcome to lrkFM.</string>
    <string name="intro_text_2">We hope that you will like this app.</string>
    <string name="intro_text_3">It\'s a good idea to go through the Settings before doing anything. If there is anything wrong please file a bug using the link in the menu.</string>
    <string name="intro_text_4">Please tap the lock to grant permission to read phone storage. If no files are being shown after that, use \'refresh\' in the top right menu. (If the lock is not visible, the permission is already granted)</string>
    <string name="intro_text_5">To interact with files you can either use the menu button next to each file entry or long press a file entry.</string>
    <string name="intro_text_6">New features in 2.0+ include: a dark theme, a notification when a new version is online in the PlayStore (only when you launch the app) and redesigned settings.</string>
    <string name="action_settings">@string/settings</string>
    <string name="type_rar">Rar</string>
    <string name="type_zip">Zip</string>
    <string name="type_tar">Tar</string>
    <string name="type_p7z">7Zip</string>
    <string name="type_tgz">tar.gz</string>
    <string name="type_unknown">Unknown</string>
    <string name="invalid_operation">Invalid Operation</string>
    <string name="backup_quota_exceeded_title">Backup Quota Exceeded</string>
    <string name="backup_quota_exceeded_message">Unable to create cloud backup. Quota exceeded.</string>
    <string name="yes_and_remember">Yes, Forever</string>
    <string name="title_activity_preference">@string/settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_ui">UI</string>
    <string name="pref_header_analytics">Analytics</string>
    <string name="pref_cat_toasts">Toasts</string>
    <string name="pref_crash_reporting_toast">Crash Reporting</string>
    <string name="pref_crash_reporting_desc">Just FYI, you can\'t turn this off (for any Google Play app)</string>
    <string name="pref_performance_reporting_title">Performance Reporting</string>
    <string name="pref_performance_reporting_desc">Measures the time it takes to complete various stuff. (like creating and extracting archives, etc.)</string>
    <string name="pref_zips_explorable">Explore archives by default</string>
    <string name="pref_zips_explorable_desc">On single tap, archives will be handled like folders.</string>
    <string name="explore">Explore</string>
    <string name="only_browsing_in_archives">Only directories can be accessed when inside an archive.</string>
    <string name="err_already_at_file_root">You are already in the root directory. Can\'t go up any further.</string>
    <string name="notif_update_title">lrkFM: New Update Available!</string>
    <string name="notif_update_content">New version available: </string>
    <string name="pref_cat_notifications">Notification</string>
    <string name="pref_update_notification_desc">Shows a notification when a new version is available on the PlayStore.</string>
    <string name="pref_update_notification_title">Update Notification</string>
    <string name="err_filename_length_lower_than_four">Error: Maximum filename length must be higher than four characters. It was set to this value.</string>
    <string name="pref_themes_value_default" translatable="false">default</string>
    <string name="pref_themes_desc">Set the app\'s color scheme.</string>
    <string name="pref_themes_title">Theme</string>
    <string name="pref_context_toasts_vibrating">Vibrating Toasts</string>
    <string name="pref_context_toasts_vibrating_desc">Allow vibration for some Toasts.</string>
    <string name="action_copy">Copy…</string>
    <string name="action_move">Move…</string>
    <string name="action_delete">Delete…</string>
    <string name="pref_vibration_length_default" translatable="false">120</string>
    <string name="pref_vibration_length">Vibration Length</string>
    <string name="pref_vibration_length_desc">Configure the length of vibration when toasts appear. Currently:</string>
</resources>