<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_cat_app">
    <SwitchPreference
        android:key="show_toast_on_cd"
        android:title="@string/pref_show_toast_cd"
        android:summary="@string/pref_show_toast_cd_desc"
        android:defaultValue="false" />
    <EditTextPreference
        android:key="home_dir"
        android:title="@string/pref_home_dir"
        android:summary="@string/pref_home_dir_desc"/>
    <SwitchPreference
        android:key="bookmark_current_folder"
        android:title="@string/pref_bookmark_corrent_folder"
        android:summary="@string/pref_bookmark_corrent_folder_desc"
        android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_ui">
        <ListPreference
            android:key="nav_header_unit"
            android:title="@string/pref_header_unit"
            android:summary="@string/pref_header_unit_desc"
            android:entries="@array/header_units"
            android:entryValues="@array/header_units_values"
            android:defaultValue="@string/pref_header_unit_default_value" />
        <SwitchPreference
            android:key="bookmark_deletion_on"
            android:title="@string/pref_bookmark_deletion"
            android:summary="@string/pref_bookmark_corrent_deletion_desc"
            android:defaultValue="false"/>
        <EditTextPreference
            android:key="filename_length"
            android:defaultValue="27"
            android:title="@string/pref_filename_length"
            android:summary="@string/pref_filename_length_desc"
            android:inputType="number"/>
        <EditTextPreference
            android:key="header_path_length"
            android:defaultValue="@string/pref_header_path_length_default"
            android:title="@string/pref_header_path_length"
            android:summary="@string/pref_header_path_length_desc"
            android:inputType="number"/>
    </PreferenceCategory>
</PreferenceScreen>