<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_cat_ui">
        <ListPreference
            android:defaultValue="@string/pref_themes_value_default"
            android:entries="@array/themes_texts"
            android:entryValues="@array/themes_values"
            android:key="theme"
            android:summary="@string/pref_themes_desc"
            android:title="@string/pref_themes_title" />
        <ListPreference
            android:defaultValue="@string/pref_header_unit_default_value"
            android:entries="@array/header_units"
            android:entryValues="@array/header_units_values"
            android:key="nav_header_unit"
            android:summary="@string/pref_header_unit_desc"
            android:title="@string/pref_header_unit" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="bookmark_deletion_on"
            android:summary="@string/pref_bookmark_corrent_deletion_desc"
            android:title="@string/pref_bookmark_deletion" />
        <EditTextPreference
            android:defaultValue="27"
            android:inputType="number"
            android:key="filename_length"
            android:summary="@string/pref_filename_length_desc"
            android:title="@string/pref_filename_length" />
        <EditTextPreference
            android:defaultValue="@string/pref_header_path_length_default"
            android:inputType="number"
            android:key="header_path_length"
            android:summary="@string/pref_header_path_length_desc"
            android:title="@string/pref_header_path_length" />
    </PreferenceCategory>
</PreferenceScreen>
